# lektor-markdown-image-attrs

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  hatch_build.py  lektor_markdown_image_attrs.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
tests/: test_plugin.py
