[build-system]
requires = [
    "hatchling>=1.9.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "lektor-markdown-image-attrs"
dynamic = ["version"]
description = """\
    Extend Lektor’s Markdown syntax to allow setting \
    arbitrary HTML attributes on images and links.\
    """
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jeff Dairiki", email = "dairiki@dairiki.org" },
]
keywords = [
    "Lektor",
    "attributes",
    "html",
    "image",
    "markdown",
    "plugin",
    "style",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Lektor",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.entry-points."lektor.plugins"]
markdown-image-attrs = "lektor_markdown_image_attrs:LektorPlugin"

[project.urls]
Homepage = "https://github.com/dairiki/lektor-markdown-image-attrs"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = [
    "/lektor_markdown_image_attrs.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "/lektor_markdown_image_attrs.py",
    "/CHANGES.md",
    "/tests",
]

[tool.setuptools_scm]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "coverage",
    "lektor",
]

[tool.hatch.envs.dev]
extra-dependencies = [
    "flake8",
    "mypy==0.971",
]

[tool.hatch.envs.test]

[[tool.hatch.envs.test.matrix]]
# python = ["37", "38", "39", "310"]
python = ["310"]
lektor = ["lektor33", "lektor34"]

[tool.hatch.envs.test.overrides]
matrix.lektor.dependencies = [
    { value = "lektor<3.4.0", if = ["lektor33"] },
    { value = "lektor>=3.4.0b2", if = ["lektor34"] },
]

[tool.hatch.envs.test.scripts]
run = "coverage run --parallel -m pytest tests"

[tool.coverage.run]
source = ["lektor_markdown_image_attrs"]

[[tool.mypy.overrides]]
module = "lektor.*"
ignore_missing_imports = true
