[metadata]
name = lektor-markdown-image-attrs
description = Extend Lektor’s Markdown syntax to allow setting
    arbitrary HTML attributes on images and links.
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-markdown-image-attrs
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin, markdown, image style, html attributes
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: Markdown

[options]
py_modules = lektor_markdown_image_attrs
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    markdown-image-attrs = lektor_markdown_image_attrs:LektorPlugin

[bdist_wheel]
universal = 1
